--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,19 @@
 gunicorn==20.1.0
+
+pip~=21.1.2
+zlib~=1.2.11
+wheel~=0.36.2
+openssl~=1.1.1g
+cryptography~=2.9.2
+py~=1.9.0
+lxml~=4.5.2
+keyring~=21.2.1
+gevent~=20.6.2
+tornado~=6.0.4
+greenlet~=0.4.16
+setuptools~=49.2.0
+cython~=0.29.21
+tensorflow~=2.4.0
+numpy~=1.18.5
+flask~=1.1.2
+pillow~=7.2.0
