--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,19 @@
-appdirs==1.4.4
-asgiref==3.3.1
-cffi==1.14.5
-click==7.1.2
-colorama==0.4.4
-cryptography==2.9.2
-cycler==0.10.0
-Cython==0.29.23
-decorator==4.4.2
-Django==3.1.7
-Flask==1.1.4
-gevent==20.6.2
-greenlet==0.4.17
-gunicorn==20.1.0
-image==1.5.33
-importlib-metadata==4.5.0
-imutils==0.5.3
-itsdangerous==1.1.0
-Jinja2==2.11.3
-keyring==21.2.1
-kiwisolver==1.3.1
-lxml==4.5.2
-MarkupSafe==2.0.1
-matplotlib==3.3.4
-mysql-connector==2.2.9
-networkx==2.5.1
-numpy==1.18.5
-opencv-contrib-python==4.2.0.32
-Pillow==7.2.0
-py==1.9.0
-pycparser==2.20
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-pywin32-ctypes==0.2.0
-rply==0.7.8
-scikit-fuzzy==0.4.2
-scipy==1.5.4
-six==1.15.0
-sql==0.4.0
-sqlparse==0.4.1
-tabulate==0.8.9
-tornado==6.0.4
-typing-extensions==3.10.0.0
-Werkzeug==1.0.1
-zipp==3.4.1
-zope.event==4.5.0
-zope.interface==5.4.0
+pip~=21.1.2
+wheel~=0.36.2
+cryptography~=2.9.2
+py~=1.9.0
+lxml~=4.5.2
+keyring~=21.2.1
+gunicorn~=20.1.0
+gevent~=20.6.2
+tornado~=6.0.4
+greenlet~=0.4.17
+setuptools~=57.0.0
+Cython~=0.29.23
+tensorflow~=2.5.0
+numpy~=1.18.5
+mysql~=0.0.3
+scikit-fuzzy~=0.4.2
+matplotlib~=3.3.4
+Flask~=1.1.4
+Pillow~=7.2.0
