--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ tornado~=6.0.4
 greenlet~=0.4.17
 setuptools~=57.0.0
 Cython~=0.29.23
-tensorflow~=2.5.0
+tensorflow-cpu~=2.5.0
 numpy~=1.18.5
 mysql~=0.0.3
 scikit-fuzzy~=0.4.2
